<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailsFood.DetailsFoodActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar_details"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/white"
        app:title="@string/app_name" />

    <ImageView
        android:id="@+id/image_product"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/image_produto"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/name_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_product"
        android:textColor="@android:color/black"
        tools:text="Nome do Produto" />

    <TextView
        android:id="@+id/price_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/name_product"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="$2.55" />

    <TextView
        android:id="@+id/rate_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/colorGray"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/name_product"
        tools:text="5.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/estrela_rate"
        android:src="@drawable/baseline_star_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_product" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/description_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/description"
        android:textColor="@color/colorGray"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:text="Descrição do produto" />

    <EditText
        android:id="@+id/quantity_product"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/quatidade_produto"
        android:ems="10"
        android:inputType="number"
        android:text="@string/quantidade_default"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_remove"
        app:layout_constraintStart_toEndOf="@+id/button_remove" />

    <Button
        android:id="@+id/button_remove"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:minHeight="1dp"
        android:onClick="setRemoveQuantity"
        android:text="@string/remove_item"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_product" />

    <Button
        android:id="@+id/button_add"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:minHeight="1dp"
        android:onClick="setAddQuantity"
        android:text="@string/add_produto"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/quantity_product"
        app:layout_constraintStart_toEndOf="@+id/quantity_product" />

    <Button
        android:id="@+id/button_add_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addItemPedido"
        android:text="@string/btn_adicionar_carrinho"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_add"
        app:layout_constraintVertical_bias="0.674"
        style="@style/ButtonStyle"/>


</androidx.constraintlayout.widget.ConstraintLayout>